# energy_aware_dnn

./: 1.sh  CMakeLists.txt  README.md  common.h  copypaste.txt  cuda_common.h  cuda_test.cu  cuda_test.h  diff.sh  dnn_api.h  engine.cpp  engine.h  graph.cpp  graph.h  helper.cpp  helper.h  log.cpp  log.h  main.cpp  manual_measure.sh  misc.cpp  module.txt  optimizer.cpp  optimizer.h  profiler.cpp  profiler.h  run.sh  simple_onnx.py  test.cpp  torch_onnx.py  trans.cpp  trans.h  visualizer.cpp  visualizer.h
dbback/: db.txt.3.6s_full  db.txt.4s_full  db.txt.good_time3.6s  db.txt.latest_thesis  db.txt.sq_energy99  v100s_super124.txt
ort_c/: main.cpp  makefile  run.sh
pb/: gen.sh  gen2.sh  model_file.proto3  onnx.proto3
scripts/: change_batch.py  fix_pads.py  gpu_run_ort.py  rand_onnx.py  run_ort.py  shape.py  version_convert.py
template/: head.txt  tail.txt
torch_model/: add_onnx.py  concat2_onnx.py  concat_onnx.py  gemm_onnx.py  pic.py  pool_onnx.py  split_onnx.py
trt/: trt5.sh  trt6.sh  trt70.sh  trt72.sh  trt8.sh
